---------------------------------------------------------------------------
Version 1.12.x (RGer), 2006-xx-xx
- implemented some changes to support Solaris
- commented out (via #if 0) some methods that are currently not being used
  but should be kept for further use
---------------------------------------------------------------------------
Version 1.12.2 (RGer), 2006-02-15
- fixed a bug in the RFC 3339 date formatter. An extra space was added
  after the actual timestamp
- added support for providing high-precision RFC3339 timestamps for
  (rsyslogd-)internally-generated messages
- very (!) experimental support for syslog-protocol internet draft
  added (the draft is experimental, the code is solid ;))
- added support for field-extracting in the property replacer
- enhanced the legacy-syslog parser so that it can interpret messages
  that do not contain a TIMESTAMP
- fixed a bug that caused the default socket (usually /dev/log) to be
  opened even when -o command line option was given
- fixed a bug in the Debian sample startup script - it caused rsyslogd
  to listen to remote requests, which it shouldn't by default
---------------------------------------------------------------------------
Version 1.12.1 (RGer), 2005-11-23
- made multithreading work with BSD. Some signal-handling needed to be
  restructured. Also, there might be a slight delay of up to 10 seconds
  when huping and terminating rsyslogd under BSD
- fixed a bug where a NULL-pointer was passed to printf() in logmsg().
- fixed a bug during "make install" where rc3195d was not installed
  Thanks to Bennett Todd for spotting this.
- fixed a bug where rsyslogd dumped core when no TAG was found in the
  received message
- enhanced message parser so that it can deal with missing hostnames
  in many cases (may not be totally fail-safe)
- fixed a bug where internally-generated messages did not have the correct
  TAG
---------------------------------------------------------------------------